--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-23 17:30+0000\n"
+"POT-Creation-Date: 2025-06-23 18:03+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -255,6 +255,9 @@ msgid "If you delete the account, it cannot be restored."
 msgstr "Если вы удалите учетную запись, ее нельзя будет восстановить."
 
 #: task_manager/templates/users/user_create.html:6
+msgid "Registration"
+msgstr "Регистрация"
+
 #: task_manager/templates/users/user_create.html:11
 msgid "Register"
 msgstr "Зарегистрировать"
@@ -278,7 +281,7 @@ msgstr "Полное имя"
 
 #: task_manager/users/forms.py:20
 msgid "New password"
-msgstr "Новый пароль"
+msgstr "Пароль"
 
 #: task_manager/users/forms.py:25
 msgid "Confirm new password"
