fix(i18n): update translation

--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-23 18:11+0000\n"
+"POT-Creation-Date: 2025-06-23 18:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -30,7 +30,7 @@ msgstr "Имя"
 
 #: task_manager/labels/views.py:24
 msgid "Label created successfully"
-msgstr "Метка создана успешно"
+msgstr "Метка успешно создана"
 
 #: task_manager/labels/views.py:35
 msgid "Label updated successfully"
@@ -59,6 +59,26 @@ msgstr "Статус успешно удален"
 #: task_manager/statuses/views.py:54
 msgid "Cannot delete status because it is in use"
 msgstr "Невозможно удалить статус, потому что он используется"
+
+#: task_manager/tasks/filters.py:16
+#: task_manager/templates/tasks/task_detail.html:11
+#: task_manager/templates/tasks/task_list.html:33
+msgid "Status"
+msgstr "Статус"
+
+#: task_manager/tasks/filters.py:21
+msgid "Executor"
+msgstr "Исполнитель"
+
+#: task_manager/tasks/filters.py:26
+#, fuzzy
+#| msgid "Labels"
+msgid "Label"
+msgstr "Метки"
+
+#: task_manager/tasks/filters.py:31
+msgid "Only my tasks"
+msgstr "Только свои задачи"
 
 #: task_manager/tasks/views.py:33
 msgid "Task created successfully"
@@ -220,11 +240,6 @@ msgstr "Дата создания"
 #: task_manager/templates/tasks/task_confirm_delete.html:9
 msgid "Are you sure you want to delete this task?"
 msgstr "Вы уверены, что хотите удалить эту задачу?"
-
-#: task_manager/templates/tasks/task_detail.html:11
-#: task_manager/templates/tasks/task_list.html:33
-msgid "Status"
-msgstr "Статус"
 
 #: task_manager/templates/tasks/task_detail.html:15
 #: task_manager/templates/tasks/task_list.html:34
